--- a/authority-framework/pom.xml
+++ b/authority-framework/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.3.1.RELEASE</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.gsd</groupId>
             <artifactId>authority-system</artifactId>
             <version>1.0-SNAPSHOT</version>
