--- a/authority-admin/pom.xml
+++ b/authority-admin/pom.xml
@@ -18,5 +18,11 @@
             <artifactId>authority-framework</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Mysql驱动包 -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
     </dependencies>
 </project>
