--- a/pom.xml
+++ b/pom.xml
@@ -16,5 +16,17 @@
     <artifactId>new-authority-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-
+    <!-- 依赖声明 -->
+    <dependencyManagement>
+        <dependencies>
+            <!-- SpringBoot的依赖配置-->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.5.9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 </project>
