获取数据库数据

--- a/authority-common/pom.xml
+++ b/authority-common/pom.xml
@@ -13,5 +13,11 @@
 
     <packaging>jar</packaging>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
