--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,31 @@
     <artifactId>new-authority-server</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <kaptcha.version>2.3.2</kaptcha.version>
+        <druid.version>1.2.8</druid.version>
+        <mybatis-spring-boot.version>2.2.2</mybatis-spring-boot.version>
+    </properties>
+
     <!-- 依赖声明 -->
     <dependencyManagement>
         <dependencies>
+            <!-- 验证码 -->
+            <dependency>
+                <groupId>com.github.penggle</groupId>
+                <artifactId>kaptcha</artifactId>
+                <version>${kaptcha.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>druid-spring-boot-starter</artifactId>
+                <version>${druid.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis.spring.boot</groupId>
+                <artifactId>mybatis-spring-boot-starter</artifactId>
+                <version>${mybatis-spring-boot.version}</version>
+            </dependency>
             <!-- SpringBoot的依赖配置-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
