--- a/authority-admin/src/main/resources/application.yml
+++ b/authority-admin/src/main/resources/application.yml
@@ -7,4 +7,10 @@ mybatis:
 spring:
   profiles:
     active: druid
+  redis:
+    host: localhost
+    port: 6379
+    password:
+    timeout: 10s
+    database: 0
 
