--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <kaptcha.version>2.3.2</kaptcha.version>
         <druid.version>1.2.8</druid.version>
         <mybatis-spring-boot.version>2.2.2</mybatis-spring-boot.version>
+        <jwt.version>0.9.0</jwt.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -40,6 +41,11 @@
                 <groupId>org.mybatis.spring.boot</groupId>
                 <artifactId>mybatis-spring-boot-starter</artifactId>
                 <version>${mybatis-spring-boot.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.jsonwebtoken</groupId>
+                <artifactId>jjwt</artifactId>
+                <version>${jwt.version}</version>
             </dependency>
             <!-- SpringBoot的依赖配置-->
             <dependency>
